--- a/package.json
+++ b/package.json
@@ -1,11 +1,4 @@
 {
-    "title": "Freelancer",
-    "name": "startbootstrap-freelancer",
-    "version": "5.1.3",
-    "scripts": {
-        "start": "node_modules/.bin/gulp watch"
-    },
-    "description": "A freelancer portfolio HTML theme for Bootstrap.",
     "keywords": [
         "css",
         "sass",
@@ -14,19 +7,14 @@
         "theme",
         "template"
     ],
-    "homepage": "https://startbootstrap.com/template-overviews/freelancer",
-    "bugs": {
-        "url": "https://github.com/BlackrockDigital/startbootstrap-freelancer/issues",
-        "email": "feedback@startbootstrap.com"
-    },
-    "license": "MIT",
-    "author": "Start Bootstrap",
-    "contributors": [
-        "David Miller (http://davidmiller.io/)"
-    ],
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/BlackrockDigital/startbootstrap-freelancer.git"
+    "homepage": "https://ravichida.github.io/ravichida.in/index.html",
+    "scripts": {
+        "start": "react-scripts start",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "5.10.2",
@@ -38,6 +26,7 @@
     "devDependencies": {
         "browser-sync": "2.26.7",
         "del": "5.1.0",
+        "gh-pages": "^3.1.0",
         "gulp": "^4.0.2",
         "gulp-autoprefixer": "7.0.0",
         "gulp-clean-css": "4.2.0",
